# globpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
examples/: glob.cpp
include/globpp/: directory_iterator.hpp  glob.hpp  glob_error.hpp  glob_grammar.hpp  is_glob.hpp  translate.hpp
src/globpp/: directory_iterator.cpp  glob_error.cpp
tests/: test_directory_iterator.cpp  test_translate.cpp
